Fix tx notifications description overflow. Fix send transactions not working for trezor or ledger. Change transaction listener.

--- a/client/src/components/TxNotifications/TxNotifications.scss
+++ b/client/src/components/TxNotifications/TxNotifications.scss
@@ -69,6 +69,7 @@
           display: flex;
           max-width: 250px;
           width: 100%;
+          word-break: break-all;
         }
 
         a.description {
